<resources>
    <string name="app_name">My Restaurants</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_adapter_rating">Rating</string>
    <string name="saved">Saved</string>
    <string name="find_restaurants_btn_txt">Find Restaurants</string>
    <string name="saved_restaurants_btn_txt">Saved Restaurants</string>
    <string name="app_title">My Restaurants</string>
    <string name="location_edit_txt_hint">Enter Zip Code</string>
    <string name="main_background_description">background image of kitchen</string>
</resources>
