<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/background2"
        android:contentDescription="@string/main_background_description"/>

    <TextView
        android:id="@+id/myRestaurantsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_title"
        android:textColor="@color/colorIcons"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorIcons"
        android:ems="10"
        android:hint="@string/location_edit_txt_hint"
        android:inputType="phone"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/findRestaurantsButton"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/find_restaurants_btn_txt"
            android:textSize="16sp"
            android:textColor="@color/colorIcons"
            android:layout_marginStart="16dp"/>

        <Button
            android:id="@+id/savedRestaurantsButton"
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/saved_restaurants_btn_txt"
            android:textSize="16sp"
            android:textColor="@color/colorIcons"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="16dp"/>
    </LinearLayout>
</RelativeLayout>
